@@ -26,18 +26,19 @@ import java.net.URL;
 public class Main {
 
     public static void main(String[] args) throws Exception {
-        AppContext context = null;
+        AppContext context;
         URL servantXML = Main.class.getClassLoader().getResource("servants.xml");
         if (servantXML != null) {
             context = new XmlAppContext();
-        } else if (Main.class.getClassLoader().getResource("servants-spring.xml") != null){
+        } else if (Main.class.getClassLoader().getResource("servants-spring.xml") != null) {
             System.out.println("[SERVER] find servants-spring.xml, use Spring mode.");
-            Class clazz = Class.forName("com.qq.tars.server.apps.SpringAppContext");
-            context = (AppContext) clazz.newInstance();
+            Class<?> clazz = Class.forName("com.qq.tars.server.apps.SpringAppContext");
+            context = (AppContext) clazz.getConstructor().newInstance();
         } else {
             System.out.println("[SERVER] servants profile does not exist, start failed.");
             throw new TarsException("servants profile does not exist");
         }
+        Server.getInstance().init();
         Server.getInstance().startUp(context);
     }
 }
